Subindo o server com express

--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "sprint-1-pb-ufms",
+  "name": "sprint-2-pb-ufms",
   "version": "1.0.0",
-  "description": "Primeira sprint do programa de bolsas Compass.uol para formação em chatbot Rasa.",
-  "main": "server.js",
+  "description": "- Segunda sprint do programa de bolsas Compass.uol para formação em chatbot Rasa.",
+  "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Compass-pb-rasa-2021-ufms/sprint-1-pb-ufms.git"
+    "url": "git+https://github.com/Compass-pb-rasa-2021-ufms/sprint-2-pb-ufms.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Compass-pb-rasa-2021-ufms/sprint-1-pb-ufms/issues"
+    "url": "https://github.com/Compass-pb-rasa-2021-ufms/sprint-2-pb-ufms/issues"
   },
-  "homepage": "https://github.com/Compass-pb-rasa-2021-ufms/sprint-1-pb-ufms#readme",
+  "homepage": "https://github.com/Compass-pb-rasa-2021-ufms/sprint-2-pb-ufms#readme",
   "dependencies": {
-    "axios": "^0.24.0"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.15"
   }
 }
