--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "got": "^11.8.2"
+    "got": "^11.8.2",
+    "mongodb": "^4.2.0",
+    "mongoose": "^6.0.13"
   },
   "engines": {
     "node": "14.x",
