--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "install": "npm install nodemon express cors axios mongodb mongoose dotenv",
-    "start": "npm install && nodemon main.js"
+    "start": "nodemon main.js"
   },
   "repository": {
     "type": "git",
