--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Segunda sprint do programa de bolsas Compass.uol para formação em chatbot Rasa.",
   "main": "app.js",
   "scripts": {
-    "start": "npm install && nodemon app.js",
+    "start": "nodemon app.js",
     "install": "npm install body-parser ejs express mongoose nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon"
