--- a/okteto.yml
+++ b/okteto.yml
@@ -8,4 +8,4 @@ forward:
 - 3001:3000
 environment:
   - MONGO_DB=mongodb://mongodb:27017
-  - API_KEY=743db5d581db75b4108b77d5f629e39e'
+  - API_KEY=743db5d581db75b4108b77d5f629e39e
