Versão Final (sem inclusao no okteto)

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nathan-ip-info",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "dependencies": {
     "axios": "^0.24.0",
