--- a/okteto.yml
+++ b/okteto.yml
@@ -3,7 +3,8 @@ autocreate: true
 image: okteto/node:14
 command: bash
 sync:
-- .:/usr/src/app
+- .:/app
 forward:
-- 8080:8080
+- 9229:9229
 - 3000:3000
+- 8080:8080
