--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,30 @@
 version: "3"
 services:
-  db:
-    image: mongo:latest
-    container_name: db
-    restart: always
+  dbmongo:
+    image: mongo
+    container_name: weathertracker-db
+    networks:
+      - dev
     ports:
       - 27017:27017
     environment:
-      MONGO_INITDB_DATABASE: myFirstDatabase
-      MONGO_INITDB_USERNAME: leoliveira
-      MONGO_INITDB_PASSWORD: senha123
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
+      MONGO_INITDB_DATABASE: test
   web:
     container_name: weathertracker
     restart: always
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: weathertracker-app
     ports: 
-      - "8080:8080"
-    links: 
-      - db
-    image: weathertracker
+      - "3000:8080"
+    networks: 
+      - dev
     depends_on:
-      - db
+      - dbmongo
+
+networks: 
+    dev:
+        driver: bridge
