--- a/package.json
+++ b/package.json
@@ -24,8 +24,14 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
-    "nodemon": "^2.0.15",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
   }
 }
